add swagger docs for products
